# nix-deploy

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs  progress.rs  progress_tui.rs  ssh_executor.rs  updater.rs
