[package]
name = "nix-deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
crossterm = "0.29.0"
ratatui = "0.29.0"
ssh2 = "0.9.5"
futures = "0.3.31"
clap = { version = "4.5.47", features = ["derive"] }