[package]
name = "nix-deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
crossterm = "0.29.0"
ratatui = "0.30.0"
ssh2 = "0.9.5"
futures = "0.3.32"
clap = { version = "4.5.58", features = ["derive"] }
strip-ansi-escapes = "0.2.1"